<resources>
    <string name="app_name" translatable="false">Calc</string>
    <string name="number_1" translatable="false">1</string>
    <string name="number_2" translatable="false">2</string>
    <string name="number_3" translatable="false">3</string>
    <string name="number_4" translatable="false">4</string>
    <string name="number_5" translatable="false">5</string>
    <string name="number_6" translatable="false">6</string>
    <string name="number_7" translatable="false">7</string>
    <string name="number_8" translatable="false">8</string>
    <string name="number_9" translatable="false">9</string>
    <string name="number_0" translatable="false">0</string>
    <string name="mark_clear" translatable="false">C</string>
    <string name="mark_equal" translatable="false">=</string>
    <string name="mark_plus" translatable="false">+</string>
    <string name="mark_minus" translatable="false">-</string>
    <string name="lcd_test" translatable="false">0123456789</string>
    <string name="mark_enter" translatable="false">Enter</string>
</resources>
