<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.fuckin.rash.jp.calc.CalcActivity">

    <Button
        android:text="@string/number_1"
        android:id="@+id/button_1"
        android:layout_height="72dp"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        android:fontFamily="monospace"
        android:textSize="30sp"
        android:layout_width="72dp"
        app:layout_constraintRight_toLeftOf="@+id/button_2" />

    <Button
        android:id="@+id/button_2"
        style="@style/Widget.AppCompat.Button.Small"
        android:text="@string/number_2"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_height="0dp"
        android:layout_width="72dp"
        app:layout_constraintTop_toTopOf="@+id/button_1"
        app:layout_constraintBottom_toBottomOf="@+id/button_1" />

    <Button
        android:text="@string/number_3"
        android:layout_height="0dp"
        android:id="@+id/button_3"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintBottom_toBottomOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_2"
        android:layout_width="72dp" />

    <Button
        android:text="@string/number_4"
        android:id="@+id/button_4"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/button_1"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="72dp" />

    <Button
        android:text="@string/number_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/button_5"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="@+id/button_2"
        app:layout_constraintLeft_toLeftOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_4"
        app:layout_constraintBottom_toBottomOf="@+id/button_4" />

    <Button
        android:text="@string/number_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/button_6"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/button_3"
        app:layout_constraintRight_toRightOf="@+id/button_3"
        app:layout_constraintBottom_toBottomOf="@+id/button_5"
        app:layout_constraintTop_toTopOf="@+id/button_5" />

    <Button
        android:text="@string/number_7"
        android:id="@+id/button_7"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="@+id/button_4"
        app:layout_constraintRight_toRightOf="@+id/button_4"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        android:layout_height="72dp"
        android:layout_width="0dp" />

    <Button
        android:text="@string/number_8"
        android:layout_width="0dp"
        android:id="@+id/button_8"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="30sp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_7"
        app:layout_constraintTop_toTopOf="@+id/button_7"
        app:layout_constraintRight_toRightOf="@+id/button_5"
        app:layout_constraintLeft_toLeftOf="@+id/button_5" />

    <Button
        android:text="@string/number_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/button_9"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_8"
        app:layout_constraintRight_toRightOf="@+id/button_6"
        app:layout_constraintLeft_toLeftOf="@+id/button_6" />

    <Button
        android:text="@string/number_0"
        android:id="@+id/button_0"
        style="@style/Widget.AppCompat.Button.Small"
        app:layout_constraintLeft_toLeftOf="@+id/button_1"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="@+id/button_2"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:fontFamily="monospace"
        android:textSize="30sp"
        android:layout_height="72dp" />

    <TextView
        android:id="@+id/text_view_lcd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textAlignment="textEnd"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:lines="1" />

    <Button
        android:text="@string/mark_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/button_equal"
        style="@style/Widget.AppCompat.Button.Small"
        app:layout_constraintLeft_toLeftOf="@+id/button_3"
        app:layout_constraintRight_toRightOf="@+id/button_plus"
        android:textAlignment="center"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_0"
        app:layout_constraintTop_toTopOf="@+id/button_0" />

    <Button
        android:text="@string/mark_plus"
        android:layout_height="0dp"
        android:id="@+id/button_plus"
        app:layout_constraintLeft_toRightOf="@+id/button_3"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_3"
        app:layout_constraintTop_toTopOf="@+id/button_3"
        android:layout_width="72dp" />

    <Button
        android:text="@string/mark_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/button_minus"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@+id/button_6"
        app:layout_constraintRight_toRightOf="@+id/button_plus"
        app:layout_constraintLeft_toLeftOf="@+id/button_plus"
        app:layout_constraintBottom_toBottomOf="@+id/button_6" />

    <Button
        android:text="@string/mark_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/button_clear"
        style="@style/Widget.AppCompat.Button.Small"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_9"
        app:layout_constraintTop_toTopOf="@+id/button_9"
        app:layout_constraintRight_toRightOf="@+id/button_minus"
        app:layout_constraintLeft_toLeftOf="@+id/button_minus" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="144dp"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="84dp"
        android:id="@+id/text_view_stack"
        app:layout_constraintRight_toRightOf="@+id/text_view_lcd"
        app:layout_constraintLeft_toLeftOf="@+id/text_view_lcd"
        app:layout_constraintTop_toBottomOf="@+id/text_view_lcd"
        android:fontFamily="monospace"
        android:textSize="12sp" />

</android.support.constraint.ConstraintLayout>
