<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/relativeLayout">

        <TextView
            android:text="@string/lcd_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:textAlignment="textStart"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="monospace"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textAlignment="textEnd"
            android:text="@string/lcd_test"
            android:textStyle="normal|bold"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:text="@string/mark_plus"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_alignParentEnd="true"
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp" />

        <TextView
            android:text="@string/mark_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_toStartOf="@+id/textView6"
            android:fontFamily="monospace"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp" />
    </RelativeLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="160dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:text="@string/number_1"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_1_"
        style="@android:style/Widget.Material.Button.Small"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_2_"
        app:layout_constraintRight_toLeftOf="@+id/button_2_"
        android:layout_marginEnd="16dp" />

    <Button
        android:text="@string/number_2"
        android:layout_height="wrap_content"
        android:id="@+id/button_2_"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginEnd="8dp"
        android:layout_width="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"
        style="@android:style/Widget.Material.Button.Small"
        android:fontFamily="monospace"
        android:textSize="24sp" />

    <Button
        android:text="@string/number_3"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_3_"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:textSize="24sp"
        style="@android:style/Widget.Material.Button.Small"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_2_" />

    <Button
        android:text="@string/mark_plus"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_plus_"
        style="@android:style/Widget.Material.Button.Small"
        android:fontFamily="monospace"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_3_"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button_3_" />

</android.support.constraint.ConstraintLayout>